CR-008: section 3 says what shipped
The design section still described the draft: jeuclid as optional
dependencies, jeuclid-core "NOT jeuclid-fop", the renderer SPI in the wiring,
and a placement built around an optional dependency loaded reflectively. What
shipped (phase 1, 6e45920c7) is Route A with jeuclid-fop as a regular
dependency of docx4j-export-fo, registered reflectively in
FORendererApacheFOP.getFOUserAgent so module-info needs no requires and an
excluded jar degrades to the equation's text with one INFO line; section 6
had recorded that decision but section 3 had not caught up.

Route A's bullets now state the shipped dependency, exclusions, registration,
probe and fallback, plus the JPMS behaviour measured on JDK 21 (automatic
modules jeuclid.fop / jeuclid.core; unresolved on the module path means the
text fallback). Route B, its SPI and SVG sizing are kept as the deferred
escalation, with Renderer 1 marked Route B only and its "not jeuclid-fop"
explained. Placement is split into as-shipped and if-Route-B-ships.

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>